--- a/typing/dune-project
+++ b/typing/dune-project
@@ -5,22 +5,22 @@
 (generate_opam_files true)
 
 (source
- (github username/reponame))
+ (github seelx3/simple-prog-lang))
 
-(authors "Author Name")
+(authors "seelx3")
 
-(maintainers "Maintainer Name")
+(maintainers "seelx3")
 
 (license LICENSE)
 
-(documentation https://url/to/documentation)
+; (documentation https://url/to/documentation)
 
 (package
  (name typing)
- (synopsis "A short synopsis")
- (description "A longer description")
+ (synopsis "typing")
+ (description "typing a simple programming language")
  (depends ocaml dune)
  (tags
-  (topics "to describe" your project)))
+  (topics "ocaml")))
 
 ; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
